[package]
name = "ping-pong-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
serde = {version="1.0.142", features=["derive"]}
serde_derive = "1.0.142"
toml = "0.5.9"
reqwest = "0.11.11"